// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSearchParams reads and writes the search string (functional update) 1`] = `
<View>
  <Text>
    The current query is "
    Michael Jackson
    ".
  </Text>
  <Text>
    The new query is "
    ".
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      underlineColorAndroid="transparent"
      value="Michael Jackson"
    />
  </View>
</View>
`;

exports[`useSearchParams reads and writes the search string (functional update) 2`] = `
<View>
  <Text>
    The current query is "
    Michael Jackson - appended
    ".
  </Text>
  <Text>
    The new query is "
    Ryan Florence
    ".
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      underlineColorAndroid="transparent"
      value="Michael Jackson"
    />
  </View>
</View>
`;

exports[`useSearchParams reads and writes the search string 1`] = `
<View>
  <Text>
    The current query is "
    Michael Jackson
    ".
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      underlineColorAndroid="transparent"
      value="Michael Jackson"
    />
  </View>
</View>
`;

exports[`useSearchParams reads and writes the search string 2`] = `
<View>
  <Text>
    The current query is "
    Ryan Florence
    ".
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      underlineColorAndroid="transparent"
      value="Ryan Florence"
    />
  </View>
</View>
`;
